# voice-cloning

./: .gitignore  AGENTS.md  BENCHMARK_RESULTS.md  PLAN.md  PRD.md  README.md  benchmark.py  debug_supertonic_full.py  main.py  multilingual_benchmark.py  patch_libs.py  pyproject.toml  repro_supertonic_debug.py  reproduce_issue.py  requirements.txt  verify_chatterbox_fix.py  walkthrough.md
benchmarks/: base.py  cli.py  config.py  multilingual_benchmark.py  results_manager.py  runner.py
benchmarks/asr/: canary.py  parakeet.py  whisper.py
benchmarks/tts/: chatterbox.py  chatterbox_turbo.py  cosyvoice.py  kitten.py  kokoro.py  marvis.py  neutts.py  omnivoice.py  soprano.py  supertone.py  supertonic2.py  supertonic3.py
benchmarks/vad/: humaware.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: BENCHMARK_GUIDE.md  BENCHMARK_RESULTS.md  CANARY_GUIDE.md  CANARY_README.md  CHATTERBOX_GUIDE.md  CHATTERBOX_TURBO_GUIDE.md  COSYVOICE_GUIDE.md  DIA2_GUIDE.md  HUMAWARE_GUIDE.md  KITTEN_GUIDE.md  KOKORO_GUIDE.md  MARVIS_FIX.md  MARVIS_GUIDE.md  MULTILINGUAL_BENCHMARK.md  NEUTTS_AIR_GUIDE.md  OMNIVOICE_GUIDE.md  PARAKEET_GUIDE.md  SOPRANO_GUIDE.md  SUPERTONE_GUIDE.md  SUPERTONIC2_GUIDE.md  SUPERTONIC3_GUIDE.md  WEB_UI_GUIDE.md  WHISPER_GUIDE.md
models/marvis-4bit/: config.json
scripts/: kitten_cli.py  patch_marvis.py  patch_mlx_utils.py
tests/: README_SUPERTONE_TESTS.md  generate_kokoro_samples_full.py  repro_kokoro_multilang.py  test_all_models.py  test_canary.py  test_canary_asr.txt  test_chatterbox_final.py  test_chatterbox_transformers.py  test_cosyvoice_fix.py  test_dia2.py  test_kitten_cli.py  test_kitten_espeak_error.py  test_kitten_import.py  test_kitten_nano.py  test_kitten_synthesis.py  test_kitten_v01.py  test_kokoro_streaming.py  test_main_web.py  test_model_flags.py  test_neutts_air.py  test_new_models.py  test_omnivoice.py  test_parakeet.py  test_parakeet_error_handling.py  test_supertone.py  test_tts_utils.py  test_ui_app.py  test_ui_asr_tab.py  test_ui_init.py  test_ui_tts_tab.py  test_ui_vad_tab.py  translation_test.txt  verify_all_features.py  verify_cosyvoice.py  verify_kokoro_mlx_spanish.py  verify_kokoro_mlx_stream.py  verify_turbo.py
tests/core/: test_all_models.py  test_benchmark_results_manager.py  test_benchmarks.py  test_model_flags.py  test_new_models.py  test_structure.py  test_tts_utils.py  verify_all_features.py  verify_mlx_update.py
tests/data/: german_translation.txt  parakeet_test.txt  parakeet_test2.txt
tests/tts/: test_soprano.py
tests/ui/: test_main_web.py  test_ui_app.py  test_ui_asr_tab.py  test_ui_full.py  test_ui_init.py  (+3 more)
(+94 files in other folders)
